[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "^0"
js-sys = "^0"
wasm-bindgen = "^0"

console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "^0"
features = [ "console", "CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "Window" ]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
